# Cpp_ek_tp

./: .gitignore  CMakeLists.txt  README.md  main_exercise1.cpp
exercise1/: CMakeLists.txt  exercise1  main_exercise1.cpp
exercise1/include/: monome.hpp  polynome.hpp
exercise1/src/: monome.cpp  polynome.cpp
include/: monome.hpp  polynome.hpp
src/: monome.cpp  polynome.cpp
test/: CMakeLists.txt  test_exercise1.cpp  test_monome.cpp  test_polynome.cpp
